--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>MALAYSIA SALARY CALCULATOR</h1>
+        <h1>MALAYSIA SALARY CALCULATOR (Less than 60)</h1>
         <div class="personal-info">
             <label>Name: <input type="text" id="name" oninput="calculate()"></label>
             <label>IC: <input type="text" id="ic" oninput="calculate()"></label>
@@ -77,3 +77,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
